# PML

./: .gitignore  GP.ipynb  GP.py  GP_chat.py  ddpm_template2.ipynb  debug_script.py  diffusion.ipynb  ex1.ipynb  ex2.ipynb  gp_mauna_loa.py  gp_mauna_loa_chat.py  main.ipynb  main.py  np 2.py  pml_exam_b2.py  pml_exam_b3.py  pml_exam_b33 2.py  pml_exam_b33.py  pyproject.toml  pyro_ex2.ipynb  sampling_pyro.py  sampling_pyro_2.py  tempCodeRunnerFile.py  week4.ipynb  week4.py  week42.ipynb
Exam/: B2.ipynb  VAE_training.ipynb  b1_2.ipynb  b2_1.ipynb  mnist_VAE.ipynb  mnist_ddpm_solution.ipynb  mnist_flow.ipynb  mnist_memorization.ipynb  mnist_memorization_k.ipynb  pml_exam_b1.ipynb  pml_exam_b1_fixed.ipynb  pml_exam_b2.ipynb  pml_exam_b33.py
